Add new GetWorldMarketWaitList endpoints
